--- a/index.html
+++ b/index.html
@@ -19,8 +19,6 @@
 
     <script src="js/d3.min.js"></script>
     <script src="js/topojson.min.js"></script>
-    <!--<script src="js/amcharts.js" type="text/javascript"></script>-->
-    <script src="js/serial.js" type="text/javascript"></script>
     <script src="js/population.js" type="text/javascript"></script>
     <style>
         /*@media screen and (max-width: 1421px) {*/
@@ -170,12 +168,12 @@
 
         $("#tooltip").hide();
     </script>
-<script src="js/map.js" type="text/javascript"></script>
+
 <!--<script src="js/chart.js" type="text/javascript"></script>-->
 <script>
 
     var width = 220,
-            barHeight = 20;
+            barHeight = 11;
 
     var x = d3.scale.linear()
             .range([0, width]);
@@ -183,8 +181,7 @@
     var chart = d3.select(".chart")
             .attr("width", width);
 
-    d3.csv("dataset/bike.csv", function(error, data) {
-
+    d3.csv("dataset/total_population.csv", function(error, data) {
 
         x.domain([0, d3.max(data, function(d) { return d.value; })]);
 
@@ -198,43 +195,33 @@
         bar.append("rect")
                 .attr("width", function(d) { return x(d.value); })
                 .attr("x",function(d){return width-x(d.value);} )
-                .attr("height", barHeight - 1);
+                .attr("height", barHeight - 2)
+                .style("fill", "#FF8533");
 
-//        bar.append("text")
-//                .attr("x", function(d) { return width - x(d.value) +35; })
-//                .attr("y", barHeight / 2)
-//                .attr("dy", ".35em")
-//                .text(function(d) { return d.value; });
+        d3.selectAll(".chart").selectAll("rect")
+                .on("mouseover", function (d) {
+                    d3.select("#uk").selectAll("path")
+                            .style("stroke-width", function(d2){
+                                if(d.name == d2.properties.SA2_NAME) {
+                                    return strokeWidth;
+                                }
+                            })
+                            .style("stroke", function(d1){
+                                if(d.name == d1.properties.SA2_NAME) {
+                                    return strokeColor;
+                                }
+                            });
+
+                    showTooltip(d.name,d.value);
+                });
 
 
-//        var x = d3.scale.linear()
-//                .domain([0, d3.max(data)])
-//                .range([0, width]);
-//
-//        var chart = d3.select(".chart")
-//                .attr("width", width)
-//                .attr("height", barHeight * data.length);
-//
-//        var bar = chart.selectAll("g")
-//                .data(data)
-//                .enter().append("g")
-//                .attr("transform", function(d, i) { return "translate(0," + i * barHeight + ")"; });
-//
-//        bar.append("rect")
-//                .attr("width", x)
-//                .attr("x",function(d){return width-x(d);} )
-//                .attr("height", barHeight - 1);
-//
-//        bar.append("text")
-//                .attr("x", function(d) { return width-x(d) + 15; })
-//                .attr("y", barHeight / 2)
-//                .attr("dy", ".35em")
-//                .text(function(d) { return d; });
     });
 
 
 
 
 </script>
+<script src="js/map.js" type="text/javascript"></script>
 </body>
 </html>
