--- a/index.html
+++ b/index.html
@@ -2,226 +2,88 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-
     <title>Safety Map</title>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-
-    <!-- Optional theme -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-
-    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-    <link href="css/dashboard.css" rel="stylesheet">
-
-    <!-- Latest compiled and minified JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-
-    <script src="js/d3.min.js"></script>
-    <script src="js/topojson.min.js"></script>
-    <script src="js/population.js" type="text/javascript"></script>
-    <style>
-        /*@media screen and (max-width: 1421px) {*/
-            /*#chartdiv{width: 24vw; position: absolute; top:48vh; right:70px;}*/
-        /*}*/
-
-        /*@media screen and (min-width: 1422px) and (max-width:1705px) {*/
-            /*#chartdiv{width: 24vw; position: absolute; top:46vh; right:80px;}*/
-        /*}*/
-
-        /*@media screen and (min-width: 1706px)and (max-width:1920px) {*/
-            /*#chartdiv{width: 24vw; position: absolute; top:44vh; right:100px;}*/
-        /*}*/
-        /*@media screen and (min-width: 1921px){*/
-            /*#chartdiv{width: 24vw; position: absolute; top:44vh; right:120px;}*/
-        /*}*/
-
-        .chart rect {
-            fill: steelblue;
-        }
-
-        .chart text {
-            fill: white;
-            font: 10px sans-serif;
-            text-anchor: end;
-        }
-
-        .badge
-        {
-
-        }
-
-        #tooltip {
-            position: absolute;
-            padding: 10px;
-            background-color: white;
-            -webkit-border-radius: 10px;
-            -moz-border-radius: 10px;
-            border-radius: 10px;
-            -webkit-box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
-            -moz-box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
-            box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
-            pointer-events: none;
-            border:1px solid #999;
-            z-index: 9999;
-            color:black;
-            opacity: 0.8;
-        }
-
-        .low
-        {
-            position: absolute; margin-top: 25px;
-        }
-        .high
-        {
-           position: absolute; left:150px; margin-top:25px;;
-        }
-        #grad {
-            position: absolute;
-            top:85vh;
-            left:30vw;
-            margin-top:20px;
-            height: 25px;
-            width:180px;
-            background: -webkit-linear-gradient(left, #FF8533 , #FF6600,#E65C00,#CC5200,#B24700); /* For Safari 5.1 to 6.0 */
-            background: -o-linear-gradient(right, #FF8533 , #FF6600,#E65C00,#CC5200,#B24700); /* For Opera 11.1 to 12.0 */
-            background: -moz-linear-gradient(right, #FF8533 , #FF6600,#E65C00,#CC5200,#B24700); /* For Firefox 3.6 to 15 */
-            background: linear-gradient(to right, #FF8533 , #FF6600,#E65C00,#CC5200,#B24700); /* Standard syntax (must be last) */
-        }
-
-    </style>
-
-
+    <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
-<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-    <div class="container-fluid">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#">Monash City Science</a>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">
-            <ul class="nav navbar-nav navbar-right">
-                <li class="active"><a href="#">Dashboard</a></li>
-            </ul>
-        </div>
-    </div>
-</nav>
+ <div class="container">
+      <h1>Melbourne Safety Map</h1>
+     <div id="summary">The 26 Republican-dominated states not participating in an expansion of Medicaid are home
+         to a disproportionate share of the nation’s poorest uninsured residents.
+         Eight million will be stranded without insurance.</div>
 
-<div class="container-fluid">
-  <div class="row">
-      <div class="col-sm-4 col-md-3 col-xs-4  sidebar" id="sidebars">
-          <ul class="nav nav-sidebar">
-              <h4>Population <span class="badge">2</span></h4>
-                  <ul class="nav nav-sidebar" id="population">
-                      <li id="total-p" class="active"><a href="#">1. Total Population</a></li>
-                      <li id="density-p"><a href="#">2. Total Population Density</a></li>
-                  </ul>
-              <h4>Transport <span class="badge">1</span></h4>
-                  <ul class="nav nav-sidebar" id="transport">
-                      <li id="vehicle-p"><a href="#">1. Vehicle Kilometers Travelled (million)</a></li>
-                  </ul>
-              <h4>Crashes <span class="badge">12</span></h4>
-                  <ul class="nav nav-sidebar" id="crashes">
-                      <li id="crash-p"><a href="#">1. Total Crashes</a></li>
-                      <li id="crash-4-p"><a href="#">2. Crashes in which a 4-16 year old involved</a></li>
-                      <li id="crash-60-p"><a href="#">3. Crashes in which a 60+ year old involved</a></li>
-                      <li id="bike-p"><a href="#">4. Bicycle Crashes</a></li>
-                      <li id="pedestrian-p"><a href="#">5. Pedestrian Crashes</a></li>
-                      <li id="motor-p"><a href="#">6. Motorbike Crashes</a></li>
-                      <li id="truck-p"><a href="#">7. Truck Crashes</a></li>
-                      <li id="fatal-p"><a href="#">8. Fatal Crashes</a></li>
-                      <li id="severe-p"><a href="#">9. Severe Injury Crashes</a></li>
-                      <li id="night-p"><a href="#">10. Nighttime Crashes</a></li>
-                      <li id="weekday-p"><a href="#">11. Weekday Crashes</a></li>
-                      <li id="weekend-p"><a href="#">12. Weekend Crashes</a></li>
-                  </ul>
-          </ul>
-    </div>
-    <!-- end of side bar-->
-    <div class="col-xs-4 col-sm-9  col-sm-push-4  col-md-9 col-md-push-3 main">
-        <h1 class="page-header">Melbourne Road Crash Map</h1>
-        <div class="col-xs-8" id="map" style="position:absolute; top:80px; height:800px;" ></div>
-        <div class="col-xs-3 col-xs-push-9">
-            <svg class="chart"></svg>
-        </div>
+     <div class="label-group">
+         <div class="labels">
+             <button  class="btn-clicked" id="total-p">Total Population</button>
+             <button  class="btn" id="density-p">Total Population Density</button>
+             <button  class="btn" id="vehicle-p">Vehicle Kilometers Travelled (million)</button>
+             <button  class="btn" id="crash-p">Total Crashes</button>
+             <button  class="btn" id="crash-4-p">Crashes in which a 4-16 year old involved</button>
+             <button  class="btn" id="crash-60-p">Crashes in which a 60+ year old involved</button>
+             <button  class="btn" id="bike-p">Bicycle Crashes</button>
+         </div>
 
-    </div>
+         <div class="labels">
+             <button class="btn" id="pedestrian-p">Pedestrian Crashes</button>
+             <button class="btn" id="motor-p">Motorbike Crashes</button>
+             <button class="btn" id="truck-p">Truck Crashes</button>
+             <button class="btn" id="fatal-p">Fatal Crashes</button>
+             <button class="btn" id="severe-p">Severe Injury Crashes</button>
+             <button class="btn" id="night-p">Nighttime Crashes</button>
+             <button class="btn" id="weekday-p">Weekday Crashes</button>
+         </div>
 
-      <!--<div id="grad">-->
-          <!--<div class="low">low</div>-->
-          <!--<div class="high">high</div>-->
-      <!--</div>-->
-  </div>
-    <div id="tooltip"></div>
-</div>
-    <script>
-        $("#sidebars li").hover(function(){
-            $("#sidebars li").removeClass("active");
-            $( this ).addClass( "active" );
-        });
-
-        $("#tooltip").hide();
-    </script>
-
-<!--<script src="js/chart.js" type="text/javascript"></script>-->
-<script>
-
-    var width = 220,
-            barHeight = 11;
-
-    var x = d3.scale.linear()
-            .range([0, width]);
-
-    var chart = d3.select(".chart")
-            .attr("width", width);
-
-    d3.csv("dataset/total_population.csv", function(error, data) {
-
-        x.domain([0, d3.max(data, function(d) { return d.value; })]);
-
-        chart.attr("height", barHeight * data.length);
-
-        var bar = chart.selectAll("g")
-                .data(data)
-                .enter().append("g")
-                .attr("transform", function(d, i) { return "translate(0," + i * barHeight + ")"; });
-
-        bar.append("rect")
-                .attr("width", function(d) { return x(d.value); })
-                .attr("x",function(d){return width-x(d.value);} )
-                .attr("height", barHeight - 2)
-                .style("fill", "#FF8533");
-
-        d3.selectAll(".chart").selectAll("rect")
-                .on("mouseover", function (d) {
-                    d3.select("#uk").selectAll("path")
-                            .style("stroke-width", function(d2){
-                                if(d.name == d2.properties.SA2_NAME) {
-                                    return strokeWidth;
-                                }
-                            })
-                            .style("stroke", function(d1){
-                                if(d.name == d1.properties.SA2_NAME) {
-                                    return strokeColor;
-                                }
-                            });
-
-                    showTooltip(d.name,d.value);
-                });
+         <div class="labels">
+             <button data-clicked="false" class="btn" id="weekend-p">Weekend Crashes</button>
+         </div>
+     </div>
+     <div id="map"></div>
+     <div id="zoom-in" class="zoom-btn">+</div>
+     <div id="zoom-out" class="zoom-btn">-</div>
+ </div>
 
 
-    });
+ <div id="tooltip"></div>
+
+
+ <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+ <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+ <script src="js/d3.min.js"></script>
+ <script src="js/topojson.min.js"></script>
+ <script src="js/map.js"></script>
+
+
+ <script>
+     $('button').hover(function(){
+         if($(this).attr('class')!= 'btn-clicked') {
+             $(this).removeClass("btn");
+             $(this).removeClass("btn-clicked").addClass("btn-active");
+         }
+
+     }, function()
+     {
+           if($(this).attr('class')!= 'btn-clicked') {
+
+               $(this).removeClass("btn-active").addClass("btn");
+           }
+     });
+
+
+     $('button').click(function(){
+         $('.btn-clicked').each(function()
+         {
+             $(this).removeClass("btn-clicked").addClass("btn");
+
+         });
+         $(this).removeClass("btn");
+         $(this).removeClass("btn-active").addClass("btn-clicked");
+
+     });
 
 
 
 
-</script>
-<script src="js/map.js" type="text/javascript"></script>
+
+ </script>
 </body>
 </html>
