Safety Map update

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Safety Map</title>
     <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
-
+    <script src="js/leaflet.js"></script>
 </head>
 <body>
  <div class="container">
@@ -57,6 +57,7 @@
  <script src="js/serial.js" type="text/javascript"></script>
  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+
  <script src="js/d3.min.js"></script>
  <script src="js/topojson.min.js"></script>
  <script src="js/map.js"></script>
@@ -210,5 +211,10 @@
          chart.validateNow();
      }
  </script>
+
+<script>
+
+
+</script>
 </body>
 </html>
