--- a/test.html
+++ b/test.html
@@ -1,33 +1,36 @@
-<!DOCTYPE html>
 <html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title></title>
-    <script src="js/d3.min.js"></script>
-    <script src="js/topojson.min.js"></script>
+<head>
+    <meta charset=utf-8 />
+    <title>TopoJSON Data</title>
+    <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
+    <script src='https://api.tiles.mapbox.com/mapbox.js/v2.1.9/mapbox.js'></script>
+    <link href='https://api.tiles.mapbox.com/mapbox.js/v2.1.9/mapbox.css' rel='stylesheet' />
+    <style>
+        body { margin:0; padding:0; }
+        #map { position:absolute; top:0; bottom:0; width:100%; }
+    </style>
 </head>
 <body>
+<script src='https://api.tiles.mapbox.com/mapbox.js/plugins/leaflet-omnivore/v0.2.0/leaflet-omnivore.min.js'></script>
 
- <div id="map"></div>
-  <script>
-      var w = 970;
-      var h = 600;
-      var center = [w / 2, h / 2];
-      var proj = d3.geo.mercator().center([145.1, -37.80]).scale(40000);
-      var path = d3.geo.path().projection(proj);
-      var t = proj.translate(); // the projection's default translation
-      var s = proj.scale() // the projection's default scale
-      var map = d3.select("#map").append("svg:svg")
-              .attr("viewBox", "0 0 " + w + " " + h)
-              .append("svg:g");
-      var uk = map.append("svg:g").attr("id", "uk");
-      d3.json("boundry.json", function (error, pop) {
-          uk.selectAll("path")
-                  .data(topojson.feature(pop, pop.objects.lga).features)
-                  .enter().append("svg:path")
-                  .attr("d", path)
+<div id='map'></div>
 
-      });
-  </script>
+<script>
+    L.mapbox.accessToken = 'pk.eyJ1IjoiaHlsYXNjYSIsImEiOiI1emkwM19vIn0.FNEUtuhBrfGtw9yicKlHmQ';
+    var map = L.mapbox.map('map', 'examples.map-i86nkdio').setView([145.1, -37.80], 13);
+
+    // Omnivore will AJAX-request this file behind the scenes and parse it:
+    // note that there are considerations:
+    // - The file must either be on the same domain as the page that requests it,
+    //   or both the server it is requested from and the user's browser must
+    //   support CORS.
+
+    // Internally this function uses the TopoJSON library to decode the given file
+    // into GeoJSON.
+    var usLayer = omnivore.topojson('pop.json')
+            .addTo(map);
+
+    console.log(usLayer);
+</script>
 </body>
 </html>
