--- a/index.html
+++ b/index.html
@@ -67,38 +67,40 @@
 
 
  <div class="prediction">
-     <h3>Predicting Crashes</h3>
-   <div class="col-xs-12 col-md-6">
-     <form class="form-group">
+     <h3 style="text-align: center">Predicting Crashes</h3>
+   <div class="col-md-6 col-md-push-3">
+     <form class="form-horizontal">
          <div class="form-group">
              <label for="vktInput">Average VKT</label><span class="msg" id="vktmsg"></span>
-             <input type="text" class="form-control" id="vktInput" placeholder="e.g. 10988778">
+             <input type="text" class="form-control input-sm" id="vktInput" placeholder="e.g. 10988778">
          </div>
          <div class="form-group">
              <label for="weeklyIncome">Percentage of Household with Weekly Income</label><span id="weeklymsg" class="msg"></span>
-             <input type="text" class="form-control" id="weeklyIncome" placeholder="e.g. 2" aria-describedby="weeklyaddon">
+             <input type="text" class="form-control input-sm" id="weeklyIncome" placeholder="e.g. 2" aria-describedby="weeklyaddon">
          </div>
          <div class="form-group">
              <label for="bikePopulation">Percentage of Population that Bike to Work</label><span id="bikemsg" class="msg"></span>
-             <input type="text" class="form-control" id="bikePopulation" placeholder="e.g. 2">
+             <input type="text" class="form-control input-sm" id="bikePopulation" placeholder="e.g. 2">
          </div>
          <div class="form-group">
              <label for="residential">Percentage of Residential Area</label><span id="residentmsg" class="msg"></span>
-             <input type="text" class="form-control" id="residential" placeholder="e.g. 2">
+             <input type="text" class="form-control input-sm" id="residential" placeholder="e.g. 2">
          </div>
          <div class="form-group">
              <label for="commercial">Percentage of Commercial Area</label><span id="commercialmsg" class="msg"></span>
-             <input type="text" class="form-control" id="commercial" placeholder="e.g. 2">
+             <input type="text" class="form-control input-sm" id="commercial" placeholder="e.g. 2">
          </div>
          <div class="form-group">
              <label for="mixIndex">Land-use Balance Mix Index </label><span id="mixmsg" class="msg"></span>
-             <input type="text" class="form-control" id="mixIndex" placeholder="e.g. 2">
+             <input type="text" class="form-control input-sm" id="mixIndex" placeholder="e.g. 2">
          </div>
-         <span id="predict" class="btn btn-default">Predict</span>
+         <div class="form-group">
+           <span id="predict" style="margin-left:45%;" class="btn btn-default">Predict</span>
+         </div>
      </form>
        </div>
-     <div class="col-xs-12 col-md-6" id="result">
-
+     <div class="col-xs-12" >
+         <h1 id="result"><b>Result</b></h1>
      </div>
  </div>
 
@@ -145,7 +147,6 @@
              $('#residentmsg').text('');
              $('#commercialmsg').text('');
              $('#mixmsg').text('');
-             $('#result').text('');
              var vktInput = parseFloat($('#vktInput').val());
              var weeklyIncome = parseFloat($('#weeklyIncome').val());
              var bikeInput = parseFloat($('#bikePopulation').val());
@@ -191,10 +192,11 @@
                  var result = 1.563 + 0.328 * vktInput +  0.012 * weeklyIncome +
                          0.036 * bikeInput + 0.013 * residentialInput + 0.009 * commercialInput +
                          0.732 * mixIndex;
-                 result = result.toFixed(2);
 
-                 $('#result').text('');
-                 $('#result').append('<h3>Result:</h3>'+result+ ' crashes in the zone');
+                 result = Math.round(Math.exp(result));
+
+                 $('#result').text('Result');
+                 $('#result').append(': '+result+ ' crashes in the zone');
              }
 
 
