--- a/index.html
+++ b/index.html
@@ -132,6 +132,9 @@
  <script src="js/chart.js"></script>
 
  <script>
+     function numberWithCommas(x) {
+         return x.toString().replace(/\B(?=(?:\d{3})+(?!\d))/g, ",");
+     }
      $(document).ready(function()
      {
 
@@ -194,6 +197,8 @@
                          0.732 * mixIndex;
 
                  result = Math.round(Math.exp(result));
+
+                 result = numberWithCommas(result);
 
                  $('#result').text('Result');
                  $('#result').append(': '+result+ ' crashes in the zone');
