prediction pre-fill

--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
 
  <script src="js/map.js"></script>
  <script src="js/chart.js"></script>
+ <script src="js/prediction.js"></script>
 
  <script>
      function numberWithCommas(x) {
